--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-ads-pagination": "^2.1.7",
     "vue-baidu-map": "^0.21.22",
     "vue-i18n": "^8.22.4",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
     "vue-slick-carousel": "^1.0.6"
   },
